--- a/index.html
+++ b/index.html
@@ -6,11 +6,246 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAQLAIN PORTFOLIO</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/976eda9e8a.js" crossorigin="anonymous"></script>
+    <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <header>
 
+
+    </header>
+    <main>
+
+        <section class="container">
+            <h2 class="color">Influencer Products</h2>
+            <div class="camera-part">
+                <div class="camera-part-one">
+                    <h1>Start your journey as Influencer</h1>
+                    <h3>Hello this is my journey as an influencer. I want to shine in life and thereby want to work hard
+                    </h3>
+
+                </div>
+                <div class="camera-part-one">
+                    <img src="images/main-camera.png" alt="">
+                </div>
+            </div>
+            <a class="button-color" target="_blank" href="https://www.google.com/">Prebook Now <i
+                    class="fas fa-arrow-alt-circle-right"></i></a>
+        </section>
+        <!-- latest courses -->
+        <section class="container">
+            <h1 class="title"> Popular Collection</h1>
+            <div class="courses">
+                <div class="course">
+                    <div class="course-photo">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="course-info">
+                        <h3 class="tripod">Flex Tripod</h3>
+                        <h3> $50.48</h3>
+                        <div class="course-detail">
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <p>5.0</p>
+                        </div>
+
+                        <p class="course-about">Wordwide shifting
+                            available
+
+                            Buyers protection possible</p>
+
+
+
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-photo">
+                        <img src="images/mic.png" alt="">
+                    </div>
+                    <div class="course-info">
+                        <h3 class="microphone">Microphone</h3>
+                        <h3> $50.48</h3>
+                        <div class="course-detail">
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <p>5.0</p>
+                        </div>
+
+                        <p class="course-about">Wordwide shifting
+                            available
+
+                            Buyers protection possible</p>
+
+
+
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-photo">
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <div class="course-info">
+                        <h3 class="airbuds">Airbuds</h3>
+                        <h3> $50.48</h3>
+                        <div class="course-detail">
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <p>5.0</p>
+                        </div>
+
+                        <p class="course-about">Wordwide shifting
+                            available
+
+                            Buyers protection possible</p>
+
+
+
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-photo">
+                        <img src="images/drone.png" alt="">
+                    </div>
+                    <div class="course-info">
+                        <h3 class="drone">Drone</h3>
+                        <h3> $50.48</h3>
+                        <div class="course-detail">
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <p>5.0</p>
+                        </div>
+
+                        <p class="course-about">Wordwide shifting
+                            available
+
+                            Buyers protection possible</p>
+
+
+
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-photo">
+                        <img src="images/lights.png" alt="">
+                    </div>
+                    <div class="course-info">
+                        <h3 class="lights">Light Setup</h3>
+                        <h3> $50.48</h3>
+                        <div class="course-detail">
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <p>5.0</p>
+                        </div>
+
+                        <p class="course-about">Wordwide shifting
+                            available
+
+                            Buyers protection possible</p>
+
+
+
+                    </div>
+                </div>
+                <div class="course">
+                    <div class="course-photo">
+                        <img src="images/setup.png" alt="">
+                    </div>
+                    <div class="course-info">
+                        <h3 class="photoshoot">Photoshoot</h3>
+                        <h3> $50.48</h3>
+                        <div class="course-detail">
+                            <div>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i>
+                            </div>
+                            <p>5.0</p>
+                        </div>
+
+                        <p class="course-about">Wordwide shifting
+                            available
+
+                            Buyers protection possible</p>
+
+
+
+                    </div>
+                </div>
+            </div>
+            <p class="button-two"> <a class="button-color" target="_blank" href="https://www.google.com/">See More<i
+                        class="fas fa-arrow-alt-circle-right"></i></a></p>
+
+
+        </section>
+
+
+
+
+
+
+
+        <section class="container">
+            <div class="third-part">
+
+                <div class="camera-two">
+                    <img src="images/gear.png" alt="">
+                </div>
+                <div class="camera-two">
+                    <h1>Featured products at one place</h1>
+                    <h3>These are the products which you can get at any time through getting connected to us. for doing
+                        so you can see the products in the left photo and can join us</h3>
+                    <a class="button-color" target="_blank" href="https://www.google.com/">Join Now <i
+                            class="fas fa-arrow-alt-circle-right"></i></a>
+
+                </div>
+            </div>
+
+            </div>
+        </section>
+        <section class="container">
+            <div class="footer-color">
+                <footer>
+                    <h4>Influencer products</h4>
+                    <p>Copyright © 2020 influencer products
+                    </p>
+                    <p> All rights reserved</p>
+                    <i class="fab fa-instagram-square"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-youtube"></i>
+                </footer>
+        </section>
+
+    </main>
 </body>
 
 </html>
